--- a/src/components/MeaningItem.module.css
+++ b/src/components/MeaningItem.module.css
@@ -4,8 +4,10 @@
     justify-content: flex-start;
     align-items: flex-start;
     margin: 5px;
-    padding: 5px;
+    margin-left: 0;
+    padding: 10px;
     font-size: 1.1em;
+    width: 100%;
     /* border: 1px solid lightgoldenrodyellow; */
     border-radius: 5px;
     background-color: lightgray;
