--- a/src/components/PhoneticItem.module.css
+++ b/src/components/PhoneticItem.module.css
@@ -5,7 +5,8 @@
     align-items: flex-start ;
     width: 100%;
     background-color: lightgray;
-    margin-block: 10px;
-    padding: 5px;
+    margin: 5px;
+    margin-left: 0;
+    padding: 10px;
     border-radius: 5px;
 }
