--- a/src/App.module.css
+++ b/src/App.module.css
@@ -13,7 +13,6 @@
 .main {
   display: flex;
   flex-direction: column;
-
   background-color: lightgray;
   height: 100%;
   width: 100%;
@@ -27,6 +26,7 @@
   height: max-content;
   padding: 5px;
   width: 100%;
+  background: linear-gradient(144deg, rgba(199,199,199,1) 0%, rgba(93,93,93,1) 100%);
 }
 
 .myPerfectInput {
@@ -48,18 +48,24 @@
 .myButton {
   padding: 10px;
   margin-right: 10px;
-  background-color: lightblue;
-  border: 1px solid deepskyblue;
+  background-color: #FFFFF1;
+  /* border: 1px solid deepskyblue; */
+  border: none;
   border-radius: 5px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.23);
   font-size: 1.1em;
   font-weight: 700;
   outline: none;
-  transition: all .2s ease-in-out;
+  transition: all .3s ease-in-out;
 }
 
 .myButton:hover {
   background-color: deepskyblue;
-  border: 1px solid lightblue;
+  /* border: 1px solid lightblue; */
+  background-color: darkslategrey;
+  /* box-shadow: 0 0px 10px hsla(20, 67%, 75%, 0.15); */
+  color: #FFFFF1;
+  transform: translateY(-2px);
 }
 
 .inputContainer {
